fixes row reverse and text align

--- a/css/main.css
+++ b/css/main.css
@@ -251,14 +251,22 @@ h2 {
     .about-me {
         margin-bottom: 100px;
     }
-    
-
+    /*
     .about-caju {
         display: flex;
         flex-direction: row-reverse;
         text-align: left;
     }
+    */
 
+    .caju {
+        text-align: left;
+    }
+
+    .about {
+        text-align: left;
+    }
+    
     .about-me {
         text-align: left;
         display: flex;
